# sverdlovsk-investor-agent

./: .env.example  Dockerfile  EXTENDED_TEMPLATES.md  IMPROVEMENT_GUIDE.md  MEDIUM_PRIORITY_CHANGES_SUMMARY.md  ML_MODEL.md  SEARCH_API.md  WEB_INTERFACE.md  config.py  docker-compose.yml  requirements-dev.txt  run_mcp_servers.py
config/: base.py  development.py
investor_agent/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CRITICAL_CHANGES_SUMMARY.md  DEPLOYMENT.md  FINAL_SUMMARY.md  GITIGNORE_GUIDE.md  HIGH_PRIORITY_CHANGES_SUMMARY.md  MCP_SERVERS.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  USAGE.md  main.py  openapi.yaml  pyproject.toml  requirements.txt  run_web.py
investor_agent/.github/workflows/: ci.yml  deploy.yml
investor_agent/config/: __init__.py  production.py  testing.py
investor_agent/mcp_servers/: __init__.py  business_registry_server.py  investment_objects_server.py  support_measures_server.py
investor_agent/mcp_servers/data/: .gitkeep  business_registry.db  investment_objects.db  support_measures.db
investor_agent/output/documents/: PKG-20260701041027_metadata.json  PKG-20260701043301_metadata.json  PKG-20260701044055_metadata.json  PKG-20260701044123_metadata.json  PKG-20260701045052_metadata.json  PKG-20260701045257_metadata.json  PKG-20260701045341_metadata.json  PKG-20260701045522_metadata.json  PKG-20260701050935_metadata.json  PKG-20260701051241_metadata.json  PKG-V2-20260701044912_metadata.json  PKG-V2-20260701045051_metadata.json  PKG-V2-20260701045256_metadata.json  PKG-V2-20260701045340_metadata.json  PKG-V2-20260701045521_metadata.json  grant_application_Грант_на_развитие_промышленного_производства.txt  test_app_20260701_044912.txt  test_app_20260701_045051.txt  test_app_20260701_045256.txt  test_app_20260701_045340.txt  test_app_20260701_045521.txt  test_doc_meta.txt  test_docx.docx
investor_agent/output/reports/: full_analysis.json
investor_agent/src/: agent.py  analysis_module.py  database_module.py  dependencies.py  documents_module.py  search_module.py
investor_agent/src/repositories/: support_measures.py
investor_agent/templates/documents/: business_plan.txt  financial_model.xlsx  fund_application.txt  grant_application.txt  grant_application_v2.jinja2  investment_proposal_v2.jinja2  subsidy_application.txt
investor_agent/tests/: conftest.py  test_extended_templates.py  test_ml_model.py  test_search_api.py  test_web_api.py
investor_agent/web/: app.py  schemas.py
investor_agent/web/middleware/: auth.py
investor_agent/web/static/: index.html
investor_agent/web/static/css/: styles.css
ml_models/: __init__.py  applicability_model.py
src/: __init__.py  database_module.py  document_export.py  search_api_client.py  search_module.py  template_engine.py
src/repositories/: __init__.py  base.py  investment_objects.py
tests/: __init__.py  test_agent.py  test_mcp_servers.py
tests/unit/: test_middleware.py  test_repositories.py
web/: STRUCTURE.md  __init__.py  error_handlers.py
web/middleware/: __init__.py  rate_limiter.py
web/static/js/: app.js
