# ============================================================
# Конфигурация проекта
# ============================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investor-agent"
version = "1.0.0"
description = "AI-агент помощник инвестора в Свердловской области"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NLP-Core-Team", email = "team@example.com"}
]
keywords = [
    "investor",
    "agent",
    "ai",
    "switzerland",
    "business",
    "support"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "aiohttp==3.9.1",
    "pandas==2.1.4",
    "sqlalchemy==2.0.23",
    "mcp==1.0.0",
    "jinja2==3.1.2",
    "python-docx==1.1.0",
    "reportlab==4.0.7",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "click==8.1.7",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pylint==3.0.3",
    "pre-commit==3.6.0",
    "bandit==1.7.5",
    "safety==2.3.5",
    "types-requests==2.31.0.20240125",
    "types-aiohttp==3.9.1.20240206",
    "types-PyYAML==6.0.12.12",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-sugar==1.0.0",
    "ipdb==0.13.13",
]

[project.urls]
Homepage = "https://github.com/NLP-Core-Team/investor-agent"
Documentation = "https://github.com/NLP-Core-Team/investor-agent#readme"
Repository = "https://github.com/NLP-Core-Team/investor-agent.git"
Issues = "https://github.com/NLP-Core-Team/investor-agent/issues"

[project.scripts]
investor-agent = "main:main"
run-web = "run_web:main"
run-mcp = "run_mcp_servers:main"


# ============================================================
# Black - форматирование кода
# ============================================================

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
skip-string-normalization = false
preview = true
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
  | docs
  | web/static
  | mcp_servers/data
)/
'''


# ============================================================
# isort - сортировка импортов
# ============================================================

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist", ".eggs", "web/static", "mcp_servers/data"]
skip_glob = ["**/migrations/**"]
known_first_party = ["src", "web", "config", "mcp_servers"]
known_third_party = ["flask", "pydantic", "loguru", "pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


# ============================================================
# mypy - проверка типов
# ============================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true
disallow_untyped_decorators = true
disallow_any_generics = false
ignore_missing_imports = true
show_error_codes = true
pretty = true
sqlite_cache = true
exclude = ["tests", "web/static", "docs", "build", "dist"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "web.*"
disallow_untyped_defs = false


# ============================================================
# flake8 - линтинг
# ============================================================

[tool.flake8]
max-line-length = 100
max-complexity = 18
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv",
    ".eggs",
    "build",
    "dist",
    "docs",
    "web/static",
    "mcp_servers/data",
    "__pycache__",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,D103",
]
count = true
statistics = true


# ============================================================
# pylint - статический анализ
# ============================================================

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0511",  # FIXME
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.typecheck]
ignored-modules = ["aiohttp", "sqlalchemy"]

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]
ignore-paths = ["tests/", "web/static/"]


# ============================================================
# pytest - тестирование
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov=web",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "api: marks tests as API tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


# ============================================================
# coverage - покрытие кода
# ============================================================

[tool.coverage.run]
source = ["src", "web"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "web/static/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/src/",
]


# ============================================================
# bandit - безопасность
# ============================================================

[tool.bandit]
exclude_dirs = ["tests", "web/static"]
skips = ["B101"]  # assert_used
targets = ["src", "web"]
format = "screen"
level = "medium"


# ============================================================
# Logging configuration
# ============================================================

[tool.loguru]
level = "INFO"
format = "<green>{time:YYYY-MM-DD HH:mm:ss}</green> | <level>{level: <8}</level> | <cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - <level>{message}</level>"
rotation = "10 MB"
retention = "30 days"
compression = "zip"
